@@ -1,6 +1,8 @@
 
 HEAD
 ====
+Fixes:
+- xt_LOGMARK: fix detection of untracked connection for Linux >= 2.6.36
 
 
 v1.32 (2011-01-04)
